@@ -1,0 +1,15 @@
+<html>
+<head>
+<style>
+/* We center the square so as to simplify the eventSender logic in parent.runTest(). */ 
+#test-container { margin: 0px auto; width: 128px; height: 128px; }
+
+#square { display: table-cell; text-align: center; vertical-align: middle; width: inherit; height: inherit; color: black; border: 1px dashed; }
+</style>
+</head>
+<body>
+<div id="test-container">
+    <div id="square" onmousemove="parent.done()">Mouse over me.</div>
+</div>
+</body>
+</html>
